bridge/base/0-clouddeploymentdashboard-namespace.yaml
#! 0-clouddeploymentdashboard-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: clouddeploymentdashboard
    labels:
        com.docker.compose.project: clouddeploymentdashboard
