bridge/base/dashboard-expose.yaml
#! dashboard-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: dashboard
    namespace: clouddeploymentdashboard
    labels:
        com.docker.compose.project: clouddeploymentdashboard
        com.docker.compose.service: dashboard
spec:
    selector:
        com.docker.compose.project: clouddeploymentdashboard
        com.docker.compose.service: dashboard
    ports:
        - name: dashboard-5000
          port: 5000
          targetPort: dashboard-5000
