bridge/base/dashboard-network-network-policy.yaml
#! dashboard-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: dashboard-network-network-policy
    namespace: clouddeploymentdashboard
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.dashboard-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.dashboard-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.dashboard-network: "true"
